--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "homepage": "http://bhavy007.github.io/valetItNow",
+  
   "name": "valetitnow",
   "version": "0.1.0",
+  
   "private": true,
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.15",
@@ -19,9 +20,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
