--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "valetitnow",
   "version": "0.1.0",
-  
+  "homepage": "http://bhavy007.github.io/valetItNow",
   "private": true,
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.15",
@@ -21,7 +21,9 @@
   },
   "scripts": {
     
-    "start": " react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
