--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "valetitnow",
   "version": "0.1.0",
-  "homepage": "http://bhavy007.github.io/valetItNow",
+  "homepage": "http://bhavy007.github.io/valet",
   "private": true,
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.15",
